# crash_tournament

./: .gitignore  README.md  adaptive_comparative_judging_design_implementation_python.md  basedpyright_output.json  pyproject.toml  test_tie_breaking.py
.github/workflows/: README.md  ci.yml  test.yml
crash_tournament/: __init__.py  __main__.py  exceptions.py  interfaces.py  logging_config.py  models.py  orchestrator.py  rank_crashes_demo.py
crash_tournament.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crash_tournament/fetchers/: __init__.py  directory_fetcher.py
crash_tournament/group_selectors/: __init__.py  least_runs_selector.py  random_selector.py  uncertainty_selector.py
crash_tournament/judges/: __init__.py  cursor_agent_judge.py  cursor_agent_streaming_judge.py  dummy_judge.py  openai_judge.py  sim_judge.py
crash_tournament/prompts/: ordinal_judge.md
crash_tournament/rankers/: __init__.py  trueskill_ranker.py
crash_tournament/storage/: __init__.py  jsonl_storage.py  sqlite_storage.py
docs/: architecture.md  future-research.md  testing.md
stubs/: README.md
stubs/trueskill/: __init__.pyi
tests/: __init__.py  test_directory_fetcher.py  test_integration.py  test_jsonl_storage.py  test_orchestrator.py  test_ranker.py  test_selector.py  test_simulated_judge.py  test_trueskill_ranker.py  test_uncertainty_selector.py
tests/fixtures/: slow_agent.py
