[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crash-tournament"
version = "0.1.0"
description = "Adaptive Comparative Judging System for crash report ranking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.2",
    "trueskill>=0.4.5",
    "loguru>=0.7.0",
    "prettytable>=3.0.0",
    "numpy>=1.20.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.scripts]
crash-tournament = "crash_tournament.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crash_tournament*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ty]
environment = { python-version = "3.10" }
rules = { "unresolved-import" = "ignore" }

[tool.basedpyright]
# Only report actual errors, not warnings
# Keep unknown types as warnings since they're often legitimate
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownLambdaType = "warning"

# Keep Any types as warnings
reportAny = "warning"

# Keep unused results as warnings
reportUnusedCallResult = "warning"

# Keep general type issues as warnings for now
reportGeneralTypeIssues = "warning"

# These should be errors
reportUnboundVariable = "error"
reportMissingImports = "error"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportNoReturnInFunction = "error"
reportRedeclaration = "error"
reportDuplicateImport = "error"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "error"
reportOverlappingOverload = "error"
reportPossiblyUnboundVariable = "error"
reportUnhashableType = "error"
reportUnsupportedDunderAll = "error"

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
    "pytest>=8.4.2",
    "loguru>=0.7.0",
    "prettytable>=3.0.0",
]
