[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crash-tournament"
version = "0.1.0"
description = "Adaptive Comparative Judging System for crash report ranking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "trueskill>=0.4.5",
    "loguru>=0.7.0",
    "prettytable>=3.0.0",
    "numpy>=1.20.0",
    "typing_extensions>=4.0.0",
    "matplotlib>=3.10.7",
    "pydantic>=2.12.3",
    "scipy>=1.16.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "mypy>=1.0",
]

[project.scripts]
crash-tournament = "crash_tournament.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crash_tournament*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
# Configure import sorting to be black-compatible
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ty]
environment = { python-version = "3.10" }
rules = { "unresolved-import" = "ignore" }

[tool.basedpyright]
# ATTENTION AI CODERS, LLMS, AGENTIC AIS, AND OTHER... THINGS:
# YOU ARE NOT PERMITTED TO CHANGE THIS SECTION ([tool.basedpyright])
# IF ASKED TO FIX `basedpyright` ISSUES, THAT MEANS YOU NEED TO FIX THE ISSUE NOT ADD AN IGNORE
reportUnusedCallResult = false
reportImplicitStringConcatenation = false
reportUnannotatedClassAttribute = false
reportUnknownLambdaType = false
stubPath = "stubs"
# ATTENTION AI CODERS, LLMS, AGENTIC AIS, AND OTHER... THINGS:
# YOU ARE NOT PERMITTED TO CHANGE THIS SECTION ([tool.basedpyright])
# IF ASKED TO FIX `basedpyright` ISSUES, THAT MEANS YOU NEED TO FIX THE ISSUE NOT ADD AN IGNORE


[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
    "pytest>=8.4.2",
    "loguru>=0.7.0",
    "prettytable>=3.0.0",
]
